force-app/main/default/objects/Project_Tracker__c/Project_Tracker__c.object-meta.xml
<CustomObject>
    <label>Project Evaluation</label>
    <nameField>
        <displayFormat>Project-{0000}</displayFormat>
        <label>Project Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>