force-app/main/default/objects/Project_Tracker__c/fields/Active_Project_List__c.field-meta.xml
<CustomField>
    <fullName>Active_Project_List__c</fullName>
    <description>The link connecting to Sharepoint</description>
    <inlineHelpText>The link connecting to Sharepoint</inlineHelpText>
    <label>Active Project List ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>