force-app/main/default/objects/Project_Tracker__c/fields/Benefits_Summary__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Summary__c</fullName>
    <label>Benefits Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>