force-app/main/default/objects/Project_Tracker__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Improvement</fullName>
            </value>
            <value>
                <fullName>Cost Savings</fullName>
            </value>
            <value>
                <fullName>Market Growth</fullName>
            </value>
            <value>
                <fullName>Product Stability</fullName>
            </value>
            <value>
                <fullName>Aftermarket Parts</fullName>
                <isActive>false</isActive>
                <label>Aftermarket Parts</label>
            </value>
            <value>
                <fullName>New Product Introduction</fullName>
                <isActive>false</isActive>
                <label>New Product Introduction</label>
            </value>
            <value>
                <fullName>Sustainability Initiative</fullName>
                <isActive>false</isActive>
                <label>Sustainability Initiative</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>