force-app/main/default/objects/Project_Tracker__c/fields/Committee_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Committee_Recommendation__c</fullName>
    <label>Committee Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>