force-app/main/default/objects/Project_Tracker__c/fields/Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Complete_Date__c</fullName>
    <description>The Date when the project reaches the complete stage (entered in by flow)</description>
    <inlineHelpText>The date when the project is completed</inlineHelpText>
    <label>Complete Date</label>
    <type>Date</type>
</CustomField>