force-app/main/default/objects/Project_Tracker__c/fields/Estimated_Total_EnggHours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_EnggHours__c</fullName>
    <label>Estimated Total  Engineering Hours</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>