force-app/main/default/objects/Project_Tracker__c/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <inlineHelpText>The Expected Start Date of this Project</inlineHelpText>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>