force-app/main/default/objects/Project_Tracker__c/fields/Final_Project_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Project_Decision__c</fullName>
    <inlineHelpText>The decision if project is approved, cancelled or deferred</inlineHelpText>
    <label>Final Project Decision</label>
    <type>TextArea</type>
</CustomField>