force-app/main/default/objects/Project_Tracker__c/fields/Impacted_Mode__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Mode__c</fullName>
    <label>Impacted Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode</valueSetName>
    </valueSet>
</CustomField>