force-app/main/default/objects/Project_Tracker__c/fields/Impacted_Style__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Style__c</fullName>
    <label>Impacted Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Style</valueSetName>
    </valueSet>
</CustomField>