force-app/main/default/objects/Project_Tracker__c/fields/Investments_Risks_Summary__c.field-meta.xml
<CustomField>
    <fullName>Investments_Risks_Summary__c</fullName>
    <description>The Supplier details relating to the project</description>
    <label>Investments/Risks Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>