force-app/main/default/objects/Project_Tracker__c/fields/Manufacturing_Risk_Assesment__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Risk_Assesment__c</fullName>
    <label>Manufacturing Risk Assesment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>