force-app/main/default/objects/Project_Tracker__c/fields/Market_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Market_Opportunity__c</fullName>
    <label>Market Opportunity</label>
    <length>250</length>
    <type>Text</type>
</CustomField>