force-app/main/default/objects/Project_Tracker__c/fields/New_Record__c.field-meta.xml
<CustomField>
    <fullName>New_Record__c</fullName>
    <description>Evaluates true when record is new when you hit the save button then this formula returns false</description>
    <formula>ISNULL(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Record</label>
    <type>Checkbox</type>
</CustomField>