force-app/main/default/objects/Project_Tracker__c/fields/Non_Recurring_Costs_Other__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Costs_Other__c</fullName>
    <inlineHelpText>Any Other costs beyond Engineering</inlineHelpText>
    <label>Non-Recurring Costs (Other)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>