force-app/main/default/objects/Project_Tracker__c/fields/Operating_Committee_Evaluation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Operating_Committee_Evaluation_Comments__c</fullName>
    <label>Operating Committee Evaluation Comments</label>
    <type>TextArea</type>
</CustomField>