force-app/main/default/objects/Project_Tracker__c/fields/Operating_Committee_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Operating_Committee_Evaluation_Date__c</fullName>
    <label>Operating Committee Evaluation Date</label>
    <type>Date</type>
</CustomField>