force-app/main/default/objects/Project_Tracker__c/fields/PI_stage_Date__c.field-meta.xml
<CustomField>
    <fullName>PI_stage_Date__c</fullName>
    <description>The Date when the project enters the Business Case Phase stage. (Entered in by flow)</description>
    <inlineHelpText>The date populated when the project enters the Business Case Phase</inlineHelpText>
    <label>Evaluation Start Date</label>
    <type>Date</type>
</CustomField>