force-app/main/default/objects/Project_Tracker__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <label>Problem Statement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>