force-app/main/default/objects/Project_Tracker__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Projects_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>