force-app/main/default/objects/Project_Tracker__c/fields/Product_Cost_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_Reduction__c</fullName>
    <label>Product Cost Reduction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>