force-app/main/default/objects/Project_Tracker__c/fields/Product_Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Comments__c</fullName>
    <label>Product Manager Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>