force-app/main/default/objects/Project_Tracker__c/fields/Product_Manager_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Recommendation__c</fullName>
    <label>Product Manager Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Accepted - Needs Evaluation</fullName>
                <label>Accepted- Needs Evaluation</label>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Approved - Needs Evaluation</fullName>
                <isActive>false</isActive>
                <label>Approved - Needs Evaluation</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Disapprove</fullName>
                <isActive>false</isActive>
                <label>Disapprove</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>