force-app/main/default/objects/Project_Tracker__c/fields/Product_Planning_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Product_Planning_Evaluation__c</fullName>
    <label>Product Planning Evaluation Date</label>
    <type>Date</type>
</CustomField>