force-app/main/default/objects/Project_Tracker__c/fields/Product_Planning_Evaluation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Planning_Evaluation_Comments__c</fullName>
    <label>Product Planning Evaluation Comments</label>
    <type>TextArea</type>
</CustomField>