force-app/main/default/objects/Project_Tracker__c/fields/Product_Project_Complexity_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Product_Project_Complexity_Reduction__c</fullName>
    <label>Product/Project Complexity Reduction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>