force-app/main/default/objects/Project_Tracker__c/fields/Production_Availability__c.field-meta.xml
<CustomField>
    <fullName>Production_Availability__c</fullName>
    <label>Production Availability</label>
    <type>Date</type>
</CustomField>