force-app/main/default/objects/Project_Tracker__c/fields/Project_Decision__c.field-meta.xml
<CustomField>
    <fullName>Project_Decision__c</fullName>
    <description>The end decision of the project phase</description>
    <label>Project Decision</label>
    <length>25</length>
    <type>Text</type>
</CustomField>