force-app/main/default/objects/Project_Tracker__c/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <label>Project Scope</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>