force-app/main/default/objects/Project_Tracker__c/fields/Project_Team_Member_2__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Member 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_Tracker1</relationshipName>
    <type>Lookup</type>
</CustomField>