force-app/main/default/objects/Project_Tracker__c/fields/Project_Team_Member_3__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Member 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_Tracker5</relationshipName>
    <type>Lookup</type>
</CustomField>