force-app/main/default/objects/Project_Tracker__c/fields/Project_Team_Member_4__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Member 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_Tracker6</relationshipName>
    <type>Lookup</type>
</CustomField>