force-app/main/default/objects/Project_Tracker__c/fields/Project_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Member 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_Tracker3</relationshipName>
    <type>Lookup</type>
</CustomField>