force-app/main/default/objects/Project_Tracker__c/fields/ProjectOwner__c.field-meta.xml
<CustomField>
    <fullName>ProjectOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_Tracker2</relationshipName>
    <type>Lookup</type>
</CustomField>