force-app/main/default/objects/Project_Tracker__c/fields/Proposed_Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Project_Scope__c</fullName>
    <label>Proposed Project Scope</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>