force-app/main/default/objects/Project_Tracker__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Pre-Project Collection&quot;</defaultValue>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Project Collection</fullName>
                <default>true</default>
                <label>Pre-Project Collection</label>
            </value>
            <value>
                <fullName>Preliminary Investigation</fullName>
            </value>
            <value>
                <fullName>Business Case Phase</fullName>
            </value>
            <value>
                <fullName>Benefits_Evaluation</fullName>
                <label>Benefits Evaluation</label>
            </value>
            <value>
                <fullName>Investments/Risks_Evaluation</fullName>
                <label>Investments/Risks Evaluation</label>
            </value>
            <value>
                <fullName>Approval Phase</fullName>
            </value>
            <value>
                <fullName>Project Plan Phase</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Business Case Evaluation ( Risks)</fullName>
                <isActive>false</isActive>
                <label>Business Case Evaluation ( Risks)</label>
            </value>
            <value>
                <fullName>Final Phase</fullName>
                <isActive>false</isActive>
                <label>Final Phase</label>
            </value>
            <value>
                <fullName>Project Phase</fullName>
                <isActive>false</isActive>
                <label>Project Phase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>