force-app/main/default/objects/Project_Tracker__c/fields/Supplier_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Assessment__c</fullName>
    <label>Supplier Assessment</label>
    <type>TextArea</type>
</CustomField>