force-app/main/default/objects/Project_Tracker__c/fields/Time_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracker__c</fullName>
    <description>The time taken for the project to progress from the Business Case Phase to the Complete stage (auto calculated by flow)</description>
    <inlineHelpText>The time in days taken by the project to progress from the Business Case Phase to completion</inlineHelpText>
    <label>Time Tracker (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>