force-app/main/default/objects/Project_Tracker__c/recordTypes/Product_Test.recordType-meta.xml
<RecordType>
    <fullName>Product_Test</fullName>
    <active>true</active>
    <label>Product Test</label>
</RecordType>