force-app/main/default/objects/Project_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Final_Project_Decision__c</columns>
    <columns>Product_Manager_Recommendation__c</columns>
    <columns>Committee_Recommendation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>